// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption renders 1`] = `
<p
  className="sc-hBYLEG hOaAIA"
>
  Text
</p>
`;

exports[`Caption renders colors 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG hOaAIA"
  >
    Default color is Bulma
  </p>
  <p
    className="sc-hBYLEG fPtvKN"
    color="piccolo.100"
  >
    Piccolo
  </p>
  <p
    className="sc-hBYLEG jRnfmP"
    color="trunks.100"
  >
    Trunks
  </p>
  <p
    className="sc-hBYLEG jLqzuB"
    color="krillin.100"
  >
    Krillin
  </p>
</div>
`;

exports[`Caption renders font-weight 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG hOaAIA"
  >
    Default font-weight is regular
  </p>
  <p
    className="sc-hBYLEG dhTCEq"
  >
    Font-weight is bold
  </p>
</div>
`;

exports[`Caption renders line height 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG hOaAIA"
  >
    Line-height is pre-calculated
  </p>
  <p
    className="sc-hBYLEG gTMQHd"
  >
    Custon line-height
  </p>
</div>
`;

exports[`Caption renders semantic tags 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG hOaAIA"
  >
    Paragraph is a default tag
  </p>
  <span
    className="sc-hBYLEG hOaAIA"
  >
    Span tag
  </span>
  <label
    className="sc-hBYLEG hOaAIA"
  >
    Label tag
  </label>
</div>
`;

exports[`Caption renders sizes 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG hOaAIA"
  >
    Default font-size is 16px
  </p>
  <p
    className="sc-hBYLEG hMeAuX"
    size={24}
  >
    Size is 24px
  </p>
  <p
    className="sc-hBYLEG bLwghT"
    size={48}
  >
    Size is 48px
  </p>
</div>
`;

exports[`Caption renders text-align 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG hOaAIA"
  >
    Text-align is not specified
  </p>
  <p
    className="sc-hBYLEG drubvb"
  >
    Centered Text
  </p>
  <p
    className="sc-hBYLEG iAkydc"
  >
    Right alignment
  </p>
</div>
`;

exports[`Caption renders underline 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG hOaAIA"
  >
    Default text-decoration is none
  </p>
  <p
    className="sc-hBYLEG lhgPFB"
  >
    Underline Text
  </p>
</div>
`;

exports[`Caption renders uppercase 1`] = `
<div
  className="flex justify-around w-full items-center"
>
  <p
    className="sc-hBYLEG hOaAIA"
  >
    Default text-transform is none
  </p>
  <p
    className="sc-hBYLEG dcWRUb"
  >
    Uppercase Text
  </p>
</div>
`;
